--- a/index.css
+++ b/index.css
@@ -2,4 +2,44 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Rubik', sans-serif;
+  background-color: blanchedalmond;
+}
+input {
+  color: #432000;
+  background-color: #dce1eb;
+  border: 0;
+  border-radius: 15px;
+  padding: 15px;
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Rubik', sans-serif;
+  margin: 10px;
+}
+
+button {
+  color: #fdfdfd;
+  background-color: #ac485a;
+  border: 0;
+  border-radius: 15px;
+  padding: 15px;
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Rubik', sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 320px;
+  margin: 30px auto;
+  border: solid black 3px;
+  border-radius: 15px;
+  padding: 20px;
+}
+
+img {
+  width: 150px;
+  margin: 0 auto;
+  padding: 10px;
 }
