--- a/index.css
+++ b/index.css
@@ -3,7 +3,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Rubik', sans-serif;
-  background-color: blanchedalmond;
+  background-color: #ffebcd;
+  color: #432000;
+  -webkit-user-select: none;
+  user-select: none;
 }
 input {
   color: #432000;
@@ -28,6 +31,11 @@ button {
   font-family: 'Rubik', sans-serif;
 }
 
+button:hover {
+    background-color: #432000;
+    cursor: pointer;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -42,4 +50,27 @@ img {
   width: 150px;
   margin: 0 auto;
   padding: 10px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    display:flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+ul li {
+    background-color: #FFFDF8;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+    border-radius: 15px;
+    flex-grow: 1;
+    text-align: center;
+    font-size: 20px;
+}
+
+ul li:hover {
+    background-color: #9fa8f8;
+    cursor: pointer;
 }
